fixed spacing on landing html

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -104,7 +104,7 @@ background-size: cover;
 /*Landing html*/
 .container-fluid {
   background-image: url("../images/nasa.jpg");
-  min-height: 400px;
+  min-height: 500px;
   opacity: 3;
   position: absolute;
   background-position: center;
